[Afficher colonne dataframe]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -40,14 +40,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of variables (columns): 12\n",
+      "Number of observations (rows): 8807\n"
+     ]
+    }
+   ],
    "source": [
     "dimensions = df.shape\n",
-    "nb_lignes, nb_colonnes = dimensions\n",
-    "print(f\"Nombre de variables (colonnes) : {nb_colonnes}\")\n",
-    "print(f\"Nombre d'observations (lignes) : {nb_lignes}\")"
+    "nb_rows, nb_columns = dimensions\n",
+    "print(f\"Number of variables (columns): {nb_columns}\")\n",
+    "print(f\"Number of observations (rows): {nb_rows}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['show_id', 'type', 'title', 'director', 'cast', 'country', 'date_added',\n",
+      "       'release_year', 'rating', 'duration', 'listed_in', 'description'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "colonnes = df.columns\n",
+    "print(colonnes)"
    ]
   }
  ],
