--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -75,8 +75,8 @@
     }
    ],
    "source": [
-    "colonnes = df.columns\n",
-    "print(colonnes)"
+    "columns = df.columns\n",
+    "print(columns)"
    ]
   }
  ],
