[6. Affichez la dimensionnalité du DataFrame.]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -39,23 +39,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'tuple' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8807 12\n"
      ]
     }
    ],
    "source": [
-    "df.shape()"
+    "\n",
+    "dimensions = df.shape\n",
+    "rows, columns = dimensions\n",
+    "print(rows, columns)"
    ]
   }
  ],
