[7. Affichez les colonnes du DataFrame.]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -56,6 +56,33 @@
     "rows, columns = dimensions\n",
     "print(rows, columns)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['show_id', 'type', 'title', 'director', 'cast', 'country', 'date_added',\n",
+      "       'release_year', 'rating', 'duration', 'listed_in', 'description'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns = df.columns\n",
+    "print(columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
