[Créer Markdown explicatif]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -30,6 +30,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Explanation** \n",
+    "- Display the information of the DataFrame\n",
+    "    - Type of index,\n",
+    "    - Columns\n",
+    "    - Non-null values\n",
+    "    - Memory usage\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -39,19 +51,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of variables (columns): 12\n",
-      "Number of observations (rows): 8807\n"
-     ]
-    }
-   ],
+   "source": [
+    "**Explanation** \n",
+    "- Display the dimensions of the DataFrame.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "dimensions = df.shape\n",
     "nb_rows, nb_columns = dimensions\n",
@@ -60,23 +71,51 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['show_id', 'type', 'title', 'director', 'cast', 'country', 'date_added',\n",
-      "       'release_year', 'rating', 'duration', 'listed_in', 'description'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "source": [
+    "**Explanation** \n",
+    "- Display the columns of the DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "columns = df.columns\n",
     "print(columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Explanation** \n",
+    "*column_types[column_types.apply(lambda x: pd.api.types.is_numeric_dtype(x))]*\n",
+    "- apply():\n",
+    "  - applies a function to each element of the series column_types\n",
+    "- lambda x:\n",
+    "  - pd.api.types.is_numeric_dtype(x) is a lambda function that checks if the type x is numeric using pd.api.types.is_numeric_dtype(x)\n",
+    "- This expression returns a series of boolean values (True or False), where True indicates that the corresponding column is numeric.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_types = df.dtypes\n",
+    "\n",
+    "quantitative_columns = column_types[column_types.apply(lambda x: pd.api.types.is_numeric_dtype(x))]\n",
+    "qualitative_columns = column_types[column_types.apply(lambda x: pd.api.types.is_categorical_dtype(x) or pd.api.types.is_object_dtype(x))]\n",
+    "\n",
+    "print(\"\\nQuantitative columns:\")\n",
+    "print(quantitative_columns)\n",
+    "print(\"\\nQualitative columns:\")\n",
+    "print(qualitative_columns)"
    ]
   }
  ],
