--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -45,24 +45,58 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Affiche les 5 dernières entrée du dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8807 entries, 0 to 8806\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   show_id       8807 non-null   object\n",
+      " 1   type          8807 non-null   object\n",
+      " 2   title         8807 non-null   object\n",
+      " 3   director      6173 non-null   object\n",
+      " 4   cast          7982 non-null   object\n",
+      " 5   country       7976 non-null   object\n",
+      " 6   date_added    8797 non-null   object\n",
+      " 7   release_year  8807 non-null   int64 \n",
+      " 8   rating        8803 non-null   object\n",
+      " 9   duration      8804 non-null   object\n",
+      " 10  listed_in     8807 non-null   object\n",
+      " 11  description   8807 non-null   object\n",
+      "dtypes: int64(1), object(11)\n",
+      "memory usage: 825.8+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "df.info()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Affiche les informations du DataFrame**<br> notamment le type d'index et\n",
+    "les colonnes, les valeurs non nulles et l'utilisation de la mémoire."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -74,15 +108,23 @@
     }
    ],
    "source": [
-    "\n",
     "dimensions = df.shape\n",
     "rows, columns = dimensions\n",
     "print(rows, columns)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Affiche la dimensionnalité du DataFrame.**<br>\n",
+    "Variables : Les variables sont les colonnes du DataFrame. Il y en a 12.<br>\n",
+    "Les observations sont les lignes du DataFrame. Il y en a 8807."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -96,15 +138,34 @@
     }
    ],
    "source": [
-    "columns = df.columns\n",
-    "print(columns)"
+    "print(df.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "show_id         object\n",
+      "type            object\n",
+      "title           object\n",
+      "director        object\n",
+      "cast            object\n",
+      "country         object\n",
+      "date_added      object\n",
+      "release_year     int64\n",
+      "rating          object\n",
+      "duration        object\n",
+      "listed_in       object\n",
+      "description     object\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "# type_de_donnees = df['show_id'].dtype\n",
     "data_types = df.dtypes\n",
@@ -138,17 +199,8 @@
    ],
    "source": [
     "# Filtrer les colonnes avec des types de données numériques\n",
-    "# numeric_data = data_types[(data_types == 'int64') | (data_types == 'float64')]\n",
     "numeric_data = data_types.apply(pd.api.types.is_numeric_dtype)\n",
     "print(numeric_data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**double étoile pour écrire en gras**\n",
-    "*simple étoile pour écrire en italique*"
    ]
   }
  ],
