[Mise au propre jusqu'à l'exercice 7]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -1,29 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Importe** la librairie *pandas*<br>\n",
+    "**Importe** les données depuis le fichier csv avec la fonction *read_*<br>\n",
+    "**Initialise** une variable *df* qui contient l'objet dataframe<br>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df=pd.read_csv('netflix_titles.csv')\n"
+    "df=pd.read_csv('netflix_titles.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importe la librairie *pandas*<br>\n",
-    "Importe les données depuis le fichier csv avec la fonction *read_*<br>\n",
-    "Initialise une variable *df* qui contient l'objet dataframe<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Affiche les 5 premières entrée du dataframe"
+    "**4. Affiche les 5 premières entrée du dataframe** via la variable df."
    ]
   },
   {
@@ -33,6 +33,13 @@
    "outputs": [],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4 bis. Affiche les 5 dernières entrée du dataframe** via la variable df."
    ]
   },
   {
@@ -48,7 +55,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Affiche les 5 dernières entrée du dataframe"
+    "**5. Affichez les informations du DataFrame**<br> notamment le type d'index et\n",
+    "les colonnes, les valeurs non nulles et l'utilisation de la mémoire."
    ]
   },
   {
@@ -90,8 +98,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Affiche les informations du DataFrame**<br> notamment le type d'index et\n",
-    "les colonnes, les valeurs non nulles et l'utilisation de la mémoire."
+    "**6. Affiche la dimensionnalité du DataFrame.**<br>\n",
+    "*Variables* : Les variables sont les colonnes du DataFrame. Il y en a 12.<br>\n",
+    "*Observation* : Les observations sont les lignes du DataFrame. Il y en a 8807."
    ]
   },
   {
@@ -117,9 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Affiche la dimensionnalité du DataFrame.**<br>\n",
-    "Variables : Les variables sont les colonnes du DataFrame. Il y en a 12.<br>\n",
-    "Les observations sont les lignes du DataFrame. Il y en a 8807."
+    "**7. Affichez les colonnes du DataFrame.**\n"
    ]
   },
   {
@@ -142,34 +149,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "show_id         object\n",
-      "type            object\n",
-      "title           object\n",
-      "director        object\n",
-      "cast            object\n",
-      "country         object\n",
-      "date_added      object\n",
-      "release_year     int64\n",
-      "rating          object\n",
-      "duration        object\n",
-      "listed_in       object\n",
-      "description     object\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
    "source": [
-    "# type_de_donnees = df['show_id'].dtype\n",
-    "data_types = df.dtypes\n",
-    "print(data_types)"
+    "8. **Affichez le type des différentes colonnes du DataFrame.**<br> Avez-vous des\n",
+    "données quantitatives (numériques) ? <br>Avez-vous des données\n",
+    "qualitatives (catégorielles) ? Si oui, lesquelles ?"
    ]
   },
   {
