[Mise au propre jusqu'à l'exercice 7]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**1. Réalisez une veille sur l’outil Jupyter Notebook** et installez le sur votre machine (soit en passant par Anaconda, soit directement sur VSCode).<br>\n",
+    "Familiarisez vous avec les cellules de code ainsi que les cellules de Markdown.<br><br>\n",
+    "**2. Créez et ouvrez un notebook Jupyter.** Nommez le “Netflix Data Analysis”.<br><br>\n",
+    "**3. Chargez le dataset à l’aide de Pandas** sous le format d’un DataFrame<br>\n",
     "**Importe** la librairie *pandas*<br>\n",
     "**Importe** les données depuis le fichier csv avec la fonction *read_*<br>\n",
     "**Initialise** une variable *df* qui contient l'objet dataframe<br>"
