--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -542,11 +542,11 @@
    ],
    "source": [
     "# Sélection les colonnes numériques\n",
-    "numerical_columns = df.select_dtypes(include=['int64', 'float64'])\n",
+    "digital_columns = df.select_dtypes(include=['int64', 'float64'])\n",
     "\n",
-    "if len(numerical_columns.columns) > 0:\n",
+    "if len(digital_columns.columns) > 0:\n",
     "    print(\"\\nColonnes numériques :\\n\")\n",
-    "    print(numerical_columns)\n",
+    "    print(digital_columns)\n",
     "else:\n",
     "    print(\"\\nAucune colonne numérique dans le DataFrame.\\n\")"
    ]
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -633,17 +633,91 @@
       "8805  Dragged from civilian life, a former superhero...  \n",
       "8806  A scrappy but poor boy worms his way into a ty...  \n",
       "\n",
+      "[8807 rows x 11 columns]\n",
+      "Colonnes catégorielles :\n",
+      "     show_id     type                  title         director  \\\n",
+      "0         s1    Movie   Dick Johnson Is Dead  Kirsten Johnson   \n",
+      "1         s2  TV Show          Blood & Water              NaN   \n",
+      "2         s3  TV Show              Ganglands  Julien Leclercq   \n",
+      "3         s4  TV Show  Jailbirds New Orleans              NaN   \n",
+      "4         s5  TV Show           Kota Factory              NaN   \n",
+      "...      ...      ...                    ...              ...   \n",
+      "8802   s8803    Movie                 Zodiac    David Fincher   \n",
+      "8803   s8804  TV Show            Zombie Dumb              NaN   \n",
+      "8804   s8805    Movie             Zombieland  Ruben Fleischer   \n",
+      "8805   s8806    Movie                   Zoom     Peter Hewitt   \n",
+      "8806   s8807    Movie                 Zubaan      Mozez Singh   \n",
+      "\n",
+      "                                                   cast        country  \\\n",
+      "0                                                   NaN  United States   \n",
+      "1     Ama Qamata, Khosi Ngema, Gail Mabalane, Thaban...   South Africa   \n",
+      "2     Sami Bouajila, Tracy Gotoas, Samuel Jouy, Nabi...            NaN   \n",
+      "3                                                   NaN            NaN   \n",
+      "4     Mayur More, Jitendra Kumar, Ranjan Raj, Alam K...          India   \n",
+      "...                                                 ...            ...   \n",
+      "8802  Mark Ruffalo, Jake Gyllenhaal, Robert Downey J...  United States   \n",
+      "8803                                                NaN            NaN   \n",
+      "8804  Jesse Eisenberg, Woody Harrelson, Emma Stone, ...  United States   \n",
+      "8805  Tim Allen, Courteney Cox, Chevy Chase, Kate Ma...  United States   \n",
+      "8806  Vicky Kaushal, Sarah-Jane Dias, Raaghav Chanan...          India   \n",
+      "\n",
+      "              date_added rating   duration  \\\n",
+      "0     September 25, 2021  PG-13     90 min   \n",
+      "1     September 24, 2021  TV-MA  2 Seasons   \n",
+      "2     September 24, 2021  TV-MA   1 Season   \n",
+      "3     September 24, 2021  TV-MA   1 Season   \n",
+      "4     September 24, 2021  TV-MA  2 Seasons   \n",
+      "...                  ...    ...        ...   \n",
+      "8802   November 20, 2019      R    158 min   \n",
+      "8803        July 1, 2019  TV-Y7  2 Seasons   \n",
+      "8804    November 1, 2019      R     88 min   \n",
+      "8805    January 11, 2020     PG     88 min   \n",
+      "8806       March 2, 2019  TV-14    111 min   \n",
+      "\n",
+      "                                              listed_in  \\\n",
+      "0                                         Documentaries   \n",
+      "1       International TV Shows, TV Dramas, TV Mysteries   \n",
+      "2     Crime TV Shows, International TV Shows, TV Act...   \n",
+      "3                                Docuseries, Reality TV   \n",
+      "4     International TV Shows, Romantic TV Shows, TV ...   \n",
+      "...                                                 ...   \n",
+      "8802                     Cult Movies, Dramas, Thrillers   \n",
+      "8803             Kids' TV, Korean TV Shows, TV Comedies   \n",
+      "8804                            Comedies, Horror Movies   \n",
+      "8805                 Children & Family Movies, Comedies   \n",
+      "8806     Dramas, International Movies, Music & Musicals   \n",
+      "\n",
+      "                                            description  \n",
+      "0     As her father nears the end of his life, filmm...  \n",
+      "1     After crossing paths at a party, a Cape Town t...  \n",
+      "2     To protect his family from a powerful drug lor...  \n",
+      "3     Feuds, flirtations and toilet talk go down amo...  \n",
+      "4     In a city of coaching centers known to train I...  \n",
+      "...                                                 ...  \n",
+      "8802  A political cartoonist, a crime reporter and a...  \n",
+      "8803  While living alone in a spooky town, a young g...  \n",
+      "8804  Looking to survive in a world taken over by zo...  \n",
+      "8805  Dragged from civilian life, a former superhero...  \n",
+      "8806  A scrappy but poor boy worms his way into a ty...  \n",
+      "\n",
       "[8807 rows x 11 columns]\n"
      ]
     }
    ],
    "source": [
     "# Sélection les colonnes catégorielles\n",
-    "categorial_columns = df.select_dtypes(include=['object', 'bool'])\n",
+    "categorical_columns = df.select_dtypes(include=['object', 'bool'])\n",
     "\n",
-    "if len(categorial_columns.columns) > 0:\n",
+    "\n",
+    "if len(categorical_columns.columns) > 0:\n",
     "    print(\"Colonnes catégorielles :\")\n",
-    "    print(categorial_columns)\n",
+    "    print(categorical_columns)\n",
+    "else:\n",
+    "    print(\"Aucune colonne catégorielle dans le DataFrame.\")\n",
+    "\n",
+    "if len(categorical_columns.columns) > 0:\n",
+    "    print(\"Colonnes catégorielles :\")\n",
+    "    print(categorical_columns)\n",
     "else:\n",
     "    print(\"Aucune colonne catégorielle dans le DataFrame.\")"
    ]
