[Améliorer les Markdown]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,9 +94,9 @@
    "source": [
     "**Explanation** \n",
     "*column_types[column_types.apply(lambda x: pd.api.types.is_numeric_dtype(x))]*\n",
-    "- apply():\n",
+    "1. `apply()`\n",
     "  - applies a function to each element of the series column_types\n",
-    "- lambda x:\n",
+    "2. `lambda x`\n",
     "  - pd.api.types.is_numeric_dtype(x) is a lambda function that checks if the type x is numeric using pd.api.types.is_numeric_dtype(x)\n",
     "- This expression returns a series of boolean values (True or False), where True indicates that the corresponding column is numeric.\n"
    ]
@@ -116,6 +116,53 @@
     "print(quantitative_columns)\n",
     "print(\"\\nQualitative columns:\")\n",
     "print(qualitative_columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Explanation** \n",
+    "*proportion en pourcentage*\n",
+    "1. `missing_data = df.isnull().sum()`\n",
+    "- Creates a series `missing_data` with missing values per column.\n",
+    "\n",
+    "2. `total_missing_data = df.isnull().sum().sum()`\n",
+    "- Calculates total missing values in the DataFrame.\n",
+    "\n",
+    "3. `missing_proportion = (missing_data / len(df)) * 100`\n",
+    "- Calculates missing values proportion per column as a percentage.\n",
+    "\n",
+    "4. `total_cells = df.size`\n",
+    "- Calculates total number of cells in the DataFrame.\n",
+    "\n",
+    "5. `total_missing_percentage = (total_missing_data / total_cells) * 100`\n",
+    "- Calculates total missing values percentage across the DataFrame.\n",
+    "\n",
+    "6. Displaying the results\n",
+    "- `print(\"Missing data per column:\")` displays missing values per column.\n",
+    "- `print(missing_data)` displays `missing_data`.\n",
+    "- `print(f\"Total percentage of missing data: {total_missing_percentage:.2f}%\")` displays total missing values percentage.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missing_data = df.isnull().sum()\n",
+    "total_missing_data = df.isnull().sum().sum()\n",
+    "\n",
+    "missing_proportion = (missing_data / len(df)) * 100\n",
+    "\n",
+    "total_cells = df.size\n",
+    "\n",
+    "total_missing_percentage = (total_missing_data / total_cells) * 100\n",
+    "\n",
+    "print(\"Missing data per column:\")\n",
+    "print(missing_data)\n",
+    "print(f\"Total percentage of missing data: {total_missing_percentage:.2f}%\")\n"
    ]
   }
  ],
