[Ajout du n°9  données manquantes]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -475,26 +475,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "show_id         object\n",
-      "type            object\n",
-      "title           object\n",
-      "director        object\n",
-      "cast            object\n",
-      "country         object\n",
-      "date_added      object\n",
-      "release_year     int64\n",
-      "rating          object\n",
-      "duration        object\n",
-      "listed_in       object\n",
-      "description     object\n",
-      "dtype: object\n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# méthode dtypes : affiche les types des différentes colonnes d'un DataFrame pandas\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mdtypes)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
    ],
@@ -713,13 +705,53 @@
     "    print(\"Colonnes catégorielles :\")\n",
     "    print(categorical_columns)\n",
     "else:\n",
-    "    print(\"Aucune colonne catégorielle dans le DataFrame.\")\n",
-    "\n",
-    "if len(categorical_columns.columns) > 0:\n",
-    "    print(\"Colonnes catégorielles :\")\n",
-    "    print(categorical_columns)\n",
-    "else:\n",
     "    print(\"Aucune colonne catégorielle dans le DataFrame.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**9. Y a-t-il des données manquantes ?**<br> Identifiez la proportion en\n",
+    "pourcentage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion de données manquantes en pourcentage :\n",
+      "show_id          0.000000\n",
+      "type             0.000000\n",
+      "title            0.000000\n",
+      "director        29.908028\n",
+      "cast             9.367549\n",
+      "country          9.435676\n",
+      "date_added       0.113546\n",
+      "release_year     0.000000\n",
+      "rating           0.045418\n",
+      "duration         0.034064\n",
+      "listed_in        0.000000\n",
+      "description      0.000000\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "missing_data = df.isna()\n",
+    "\n",
+    "# Calculer la proportion en pourcentage\n",
+    "percentage_missing = missing_data.mean() * 100\n",
+    "\n",
+    "# Afficher les proportions en pourcentage\n",
+    "print(\"Proportion de données manquantes en pourcentage :\")\n",
+    "print(percentage_missing)"
    ]
   }
  ],
