--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -742,6 +742,72 @@
     "\n",
     "print(\"Ligne correspondant à\", search, \":\\n\", ligne)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**13. Affichez le nom du film le plus récent du dataset.**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le film le plus récent dans le dataset est: My Little Pony: A New Generation\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ne conserver que les Movies\n",
+    "movies = df[df['type'] == 'Movie']\n",
+    "\n",
+    "# Trouver la valeur la plus élevé de la colonne 'release_year' \n",
+    "most_recent = movies['release_year'].idxmax()\n",
+    "\n",
+    "# Récupérer le titre du film le plus récent\n",
+    "most_recent_movie = df.loc[most_recent, 'title']\n",
+    "\n",
+    "print(\"Le film le plus récent dans le dataset est:\", most_recent_movie)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**14. Affichez le nom de la série la plus récente du dataset.**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le TV show le plus récent dans le dataset est: Blood & Water\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ne conserver que les TV shows\n",
+    "tv_shows = df[df['type'] == 'TV Show']\n",
+    "\n",
+    "# Trouver l'indice du TV show le plus récent parmi les TV shows filtrés\n",
+    "recent_tv_show = tv_shows['release_year'].idxmax()\n",
+    "\n",
+    "# Récupérer le titre du TV show le plus récent\n",
+    "most_recent_tv_show = tv_shows.loc[recent_tv_show, 'title']\n",
+    "\n",
+    "print(\"Le TV show le plus récent dans le dataset est:\", most_recent_tv_show)\n"
+   ]
   }
  ],
  "metadata": {
