[n°15, certaine valeur ne sont pas convertible]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -808,6 +808,70 @@
     "\n",
     "print(\"Le TV show le plus récent dans le dataset est:\", most_recent_tv_show)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**15. Modifiez la variable date_added de telle sorte qu’elle soit de type\n",
+    "DateTime.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valeurs de date qui n'ont pas été converties correctement:\n",
+      "6066   NaT\n",
+      "6079   NaT\n",
+      "6174   NaT\n",
+      "6177   NaT\n",
+      "6213   NaT\n",
+      "        ..\n",
+      "8539   NaT\n",
+      "8557   NaT\n",
+      "8684   NaT\n",
+      "8712   NaT\n",
+      "8755   NaT\n",
+      "Name: date_added, Length: 98, dtype: datetime64[ns]\n",
+      "show_id                 object\n",
+      "type                    object\n",
+      "title                   object\n",
+      "director                object\n",
+      "cast                    object\n",
+      "country                 object\n",
+      "date_added      datetime64[ns]\n",
+      "release_year             int64\n",
+      "rating                  object\n",
+      "duration                object\n",
+      "listed_in               object\n",
+      "description             object\n",
+      "title_lower             object\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convertir la variable 'date_added' en type DateTime avec gestion des erreurs\n",
+    "df['date_added'] = pd.to_datetime(df['date_added'], errors='coerce')\n",
+    "\n",
+    "# Afficher les valeurs qui n'ont pas été converties correctement\n",
+    "print(\"Valeurs de date qui n'ont pas été converties correctement:\")\n",
+    "print(df[df['date_added'].isnull()]['date_added'])\n",
+    "\n",
+    "# Vérifier le type de données après conversion\n",
+    "print(df.dtypes)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
