--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -776,40 +776,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0        90\n",
-      "6        91\n",
-      "7       125\n",
-      "9       104\n",
-      "12      127\n",
-      "       ... \n",
-      "8801     96\n",
-      "8802    158\n",
-      "8804     88\n",
-      "8805     88\n",
-      "8806    111\n",
-      "Name: duration, Length: 6131, dtype: object\n"
+      "0              90\n",
+      "1       2 Seasons\n",
+      "2        1 Season\n",
+      "3        1 Season\n",
+      "4       2 Seasons\n",
+      "          ...    \n",
+      "8802          158\n",
+      "8803    2 Seasons\n",
+      "8804           88\n",
+      "8805           88\n",
+      "8806          111\n",
+      "Name: duration, Length: 8807, dtype: object\n"
      ]
     }
    ],
    "source": [
-    "# Ne conserver que les Movies\n",
-    "# .copy() évite le SettingWithCopyWarning\n",
-    "movies = df[df['type'] == 'Movie'].copy()\n",
+    "# Remplacer les valeurs NaN\n",
+    "'''\n",
+    "df['type'] == 'Movie' : Crée un masque booléen qui sélectionne toutes les lignes où la valeur de la colonne 'type' est égale à 'Movie'.\n",
+    "                        Crée une série de booléens avec True pour les lignes qui correspondent à la condition et False pour les autres.\n",
     "\n",
-    "# Remplacer les valeurs NaN par '0 min'\n",
-    "movies.loc[:, 'duration'] = movies['duration'].fillna('0 min')\n",
+    "df.loc[condition, 'duration'] : Sélectionne les lignes pour lesquelles la condition est vraie ( type == 'Movie') dans la colonne 'duration'.\n",
+    "                                Cela renvoie une série de Pandas contenant les valeurs de la colonne 'duration' pour ces lignes.\n",
+    "\n",
+    ".fillna('0 min') :  Remplace les valeurs NaN dans la série de la colonne 'duration' par la chaîne de caractères '0 min'.\n",
+    "                    Pour les lignes où le type est 'Movie' et où la durée est manquante, la valeur sera remplacée par '0 min'.\n",
+    "\n",
+    "df.loc[df['type'] == 'Movie', 'duration'] = ... : Remplace les valeurs dans la colonne 'duration' du DataFrame 'df' pour les lignes où le type est 'Movie' par les valeurs retournées par .fillna('0 min').\n",
+    "'''\n",
+    "df.loc[df['type'] == 'Movie', 'duration'] = df.loc[df['type'] == 'Movie', 'duration'].fillna('0 min')\n",
     "\n",
     "# Conversion de la colonne 'duration' en entiers\n",
-    "movies.loc[:, 'duration'] = movies['duration'].str.replace(' min', '').astype(int)\n",
+    "df.loc[df['type'] == 'Movie', 'duration'] = df.loc[df['type'] == 'Movie', 'duration'].str.replace(' min', '').astype(int)\n",
     "\n",
-    "print(movies['duration'])\n",
+    "print(df['duration'])\n",
+    "\n",
     "\n"
    ]
   }
