10 [Créer code de la question 10 avec 2 options]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -187,7 +187,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "import missingno as msno\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "msno.bar(df)\n",
+    "plt.title('Histogramme des données manquantes avec bar')\n",
+    "plt.show()\n",
+    "\n",
+    "# msno.matrix(df)\n",
+    "# plt.title('Visualization of missing data with matrix')\n",
+    "# plt.show()\n"
+   ]
   },
   {
    "cell_type": "code",
