10 [ Créer Markdown pour les 2 choix]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -188,6 +188,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 10\n",
+    "**Explanation** \n",
+    "1. `msno.matrix(df)` or `msno.bar(df)` \n",
+    "   - Creates a \"matrix\" plot to visualize missing data in the DataFrame df\n",
+    "   - Create a histogram showing the number of missing data for each column in the DataFrame df\n",
+    "2. `plt.title('Visualization of missing data with matrix')` or `plt.title('Histogram of missing data with bars')`\n",
+    "   - Sets the title of the plot.\n",
+    "3. `plt.show()`\n",
+    "   - Displays the plot on the screen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import missingno as msno\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -199,13 +216,6 @@
     "# plt.title('Visualization of missing data with matrix')\n",
     "# plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
