11 [ Ajout du code de la 11]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -227,7 +227,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "random_observation = df.sample()\n",
+    "print(random_observation)"
+   ]
   },
   {
    "cell_type": "markdown",
