--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -220,7 +220,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 11\n",
+    "**Explanation** \n",
+    "1. `random_observation = df.sample()` \n",
+    "   - Selects a random observation from the DataFrame df.\n",
+    "2. `print(random_observation)`\n",
+    "   - Displays the selected random observation.\n"
+   ]
   },
   {
    "cell_type": "code",
