12 [ Créer code pour récupéper info du film]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -249,7 +249,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "info = df[df['title'] == 'Catch Me If You Can']\n",
+    "print(info)"
+   ]
   },
   {
    "cell_type": "markdown",
