12 [ Créer Markdown explicatif ]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -242,7 +242,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 12\n",
+    "**Explanation** \n",
+    "1. `df['Titre'] == 'Catch Me If You Can'` \n",
+    "   - Crée un masque booléen qui sélectionne toutes les lignes où la colonne \"Titre\" est égale à \"Catch Me If You Can\".\n",
+    "2. `df[...]`\n",
+    "   - Filtre le DataFrame en utilisant ce masque pour sélectionner toutes les informations relatives à l'œuvre \"Catch Me If You Can\".\n",
+    "3. `print(info_catch_me)`\n",
+    "    -  Affiche ces informations."
+   ]
   },
   {
    "cell_type": "code",
