13 [ Créer code pour le film le plus récent ]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -273,7 +273,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "most_recent_film = df.query(\"type == 'Movie'\").sort_values(by='release_year', ascending=False).iloc[0]['title']\n",
+    "print(f\"The most recent film is : {most_recent_film}\")"
+   ]
   },
   {
    "cell_type": "code",
