14 [ Créer code pour la série la plus récente ]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -283,7 +283,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "most_recent_tv_show = df.query(\"type == 'TV Show'\").sort_values(by='release_year', ascending=False).iloc[0]['title']\n",
+    "print(f\"The most recent film is : {most_recent_tv_show}\")"
+   ]
   },
   {
    "cell_type": "markdown",
