13 & 14 [ Créer le Markdown du 13 et 14 ]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -266,7 +266,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 13 | 14\n",
+    "**Explanation** \n",
+    "1. `df.query(\"type == 'TV Show'\")` or `df.query(\"type == 'Movie'\")`\n",
+    "   - Filter the DataFrame to select only the films with type \"Movie\" or \"TV Show\"\n",
+    "1. `df.sort_values(by='release_year', ascending=False)` \n",
+    "   - Sorts the DataFrame by the \"release_year\" column in descending order (from newest to oldest)\n",
+    "2. `.iloc[0]['Titre'] `\n",
+    "   - Selects the movie title in the first row (the most recent movie) of the sorted DataFrame\n",
+    "3. `print(f\"The most recent film is : {most_recent_film}\")`\n",
+    "    - Displays the name of the most recent movie"
+   ]
   },
   {
    "cell_type": "code",
