[n°18 Ne comprend pas comment gérer les erreurs]

--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,8 +499,8 @@
     }
    ],
    "source": [
-    "# méthode dtypes : affiche les types des différentes colonnes d'un DataFrame pandas\n",
-    "print(df.dtypes)"
+    "# méthode dtypes : affiche les listed_ins des différentes colonnes d'un DataFrame pandas\n",
+    "print(df.dlisted_ins)"
    ]
   },
   {
@@ -1108,6 +1108,49 @@
     "\n",
     "\n",
     "print(df['duration'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**18. Modifiez la variable listed_in de telle sorte que la chaîne de caractères\n",
+    "soit un liste de chaîne de caractères**<br>Par exemple : [“International TV\n",
+    "Shows”, “TV Dramas”, “TV Mysteries”] au lieu de “International TV\n",
+    "Shows, TV Dramas, TV Mysteries”.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0                                         [Documentaries]\n",
+      "1       [International TV Shows, TV Dramas, TV Mysteries]\n",
+      "2       [Crime TV Shows, International TV Shows, TV Ac...\n",
+      "3                                [Docuseries, Reality TV]\n",
+      "4       [International TV Shows, Romantic TV Shows, TV...\n",
+      "                              ...                        \n",
+      "8802                     [Cult Movies, Dramas, Thrillers]\n",
+      "8803             [Kids' TV, Korean TV Shows, TV Comedies]\n",
+      "8804                            [Comedies, Horror Movies]\n",
+      "8805                 [Children & Family Movies, Comedies]\n",
+      "8806     [Dramas, International Movies, Music & Musicals]\n",
+      "Name: listed_in, Length: 8807, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convertir la colonne 'listed_in' en une liste de chaînes de caractères\n",
+    "df['listed_in'] = df['listed_in'].str.split(', ')\n",
+    "\n",
+    "print(df['listed_in'])\n",
+    "\n",
+    "\n"
    ]
   }
  ],
