--- a/Netflix Data Analysis.ipynb
+++ b/Netflix Data Analysis.ipynb
@@ -1145,12 +1145,163 @@
     }
    ],
    "source": [
-    "# Convertir la colonne 'listed_in' en une liste de chaînes de caractères\n",
+    "# la méthode split(', ') divise la chaîne en sous-chaînes séparées par une virgule et un espace.\n",
     "df['listed_in'] = df['listed_in'].str.split(', ')\n",
     "\n",
     "print(df['listed_in'])\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**19. Affichez les valeurs uniques des variables : type, country,\n",
+    "release_year, rating et listed_in.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valeurs uniques de 'type' avec leur nombre d'occurrences:\n",
+      "type\n",
+      "Movie      6131\n",
+      "TV Show    2676\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Valeurs uniques de 'country' avec leur nombre d'occurrences:\n",
+      "country\n",
+      "United States                             2818\n",
+      "India                                      972\n",
+      "United Kingdom                             419\n",
+      "Japan                                      245\n",
+      "South Korea                                199\n",
+      "                                          ... \n",
+      "Romania, Bulgaria, Hungary                   1\n",
+      "Uruguay, Guatemala                           1\n",
+      "France, Senegal, Belgium                     1\n",
+      "Mexico, United States, Spain, Colombia       1\n",
+      "United Arab Emirates, Jordan                 1\n",
+      "Name: count, Length: 748, dtype: int64\n",
+      "\n",
+      "Valeurs uniques de 'release_year' avec leur nombre d'occurrences:\n",
+      "release_year\n",
+      "2018    1147\n",
+      "2017    1032\n",
+      "2019    1030\n",
+      "2020     953\n",
+      "2016     902\n",
+      "        ... \n",
+      "1959       1\n",
+      "1925       1\n",
+      "1961       1\n",
+      "1947       1\n",
+      "1966       1\n",
+      "Name: count, Length: 74, dtype: int64\n",
+      "\n",
+      "Valeurs uniques de 'rating' avec leur nombre d'occurrences:\n",
+      "rating\n",
+      "TV-MA       3207\n",
+      "TV-14       2160\n",
+      "TV-PG        863\n",
+      "R            799\n",
+      "PG-13        490\n",
+      "TV-Y7        334\n",
+      "TV-Y         307\n",
+      "PG           287\n",
+      "TV-G         220\n",
+      "NR            80\n",
+      "G             41\n",
+      "TV-Y7-FV       6\n",
+      "NC-17          3\n",
+      "UR             3\n",
+      "74 min         1\n",
+      "84 min         1\n",
+      "66 min         1\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Valeurs uniques de 'listed_in' avec leur nombre d'occurrences:\n",
+      "listed_in\n",
+      "International Movies            2752\n",
+      "Dramas                          2427\n",
+      "Comedies                        1674\n",
+      "International TV Shows          1351\n",
+      "Documentaries                    869\n",
+      "Action & Adventure               859\n",
+      "TV Dramas                        763\n",
+      "Independent Movies               756\n",
+      "Children & Family Movies         641\n",
+      "Romantic Movies                  616\n",
+      "TV Comedies                      581\n",
+      "Thrillers                        577\n",
+      "Crime TV Shows                   470\n",
+      "Kids' TV                         451\n",
+      "Docuseries                       395\n",
+      "Music & Musicals                 375\n",
+      "Romantic TV Shows                370\n",
+      "Horror Movies                    357\n",
+      "Stand-Up Comedy                  343\n",
+      "Reality TV                       255\n",
+      "British TV Shows                 253\n",
+      "Sci-Fi & Fantasy                 243\n",
+      "Sports Movies                    219\n",
+      "Anime Series                     176\n",
+      "Spanish-Language TV Shows        174\n",
+      "TV Action & Adventure            168\n",
+      "Korean TV Shows                  151\n",
+      "Classic Movies                   116\n",
+      "LGBTQ Movies                     102\n",
+      "TV Mysteries                      98\n",
+      "Science & Nature TV               92\n",
+      "TV Sci-Fi & Fantasy               84\n",
+      "TV Horror                         75\n",
+      "Anime Features                    71\n",
+      "Cult Movies                       71\n",
+      "Teen TV Shows                     69\n",
+      "Faith & Spirituality              65\n",
+      "TV Thrillers                      57\n",
+      "Movies                            57\n",
+      "Stand-Up Comedy & Talk Shows      56\n",
+      "Classic & Cult TV                 28\n",
+      "TV Shows                          16\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Afficher les valeurs uniques de la variable 'type' avec leur nombre d'occurrences\n",
+    "print(\"Valeurs uniques de 'type' avec leur nombre d'occurrences:\")\n",
+    "print(df['type'].value_counts())\n",
+    "\n",
+    "# Afficher les valeurs uniques de la variable 'country' avec leur nombre d'occurrences\n",
+    "print(\"\\nValeurs uniques de 'country' avec leur nombre d'occurrences:\")\n",
+    "print(df['country'].value_counts())\n",
+    "\n",
+    "# Afficher les valeurs uniques de la variable 'release_year' avec leur nombre d'occurrences\n",
+    "print(\"\\nValeurs uniques de 'release_year' avec leur nombre d'occurrences:\")\n",
+    "print(df['release_year'].value_counts())\n",
+    "\n",
+    "# Afficher les valeurs uniques de la variable 'rating' avec leur nombre d'occurrences\n",
+    "print(\"\\nValeurs uniques de 'rating' avec leur nombre d'occurrences:\")\n",
+    "print(df['rating'].value_counts())\n",
+    "\n",
+    "# Afficher les valeurs uniques de la variable 'listed_in' avec leur nombre d'occurrences\n",
+    "print(\"\\nValeurs uniques de 'listed_in' avec leur nombre d'occurrences:\")\n",
+    "print(df['listed_in'].explode().value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**20.Voyez-vous un “director” ayant produit plus d’une œuvre ?**\n"
    ]
   }
  ],
